--- a/style.css
+++ b/style.css
@@ -3,15 +3,21 @@
     padding: 0;
     box-sizing: border-box;
 }
+.creepster-regular {
+  font-family: "Creepster", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
 #canvas1{
     border: 5px solid black;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translateY(-50%,-50%);
+    transform: translate(-50%,-50%);
     max-width: 100%;
-    max-height: 100%;
+    max-height: 100%; 
+    font-family: "Creepster", cursive;
 }
-#player,#layer1,#layer2,#layer3,#layer4,#layer5,#enemy_fly,#enemy_plant,#enemy_spider_big , #fire ,#collisionAnimation{
+#player,#layer1,#layer2,#layer3,#layer4,#layer5,#enemy_fly,#enemy_plant,#enemy_spider_big , #fire ,#collisionAnimation, #lives{
     display: none;
 }
