--- a/style.css
+++ b/style.css
@@ -51,21 +51,68 @@ body {
 canvas{
     border-radius: 12px;
 }
+.hud {
+    width: 200px;
+    padding: 20px;
+    background: rgba(10,20,40,0.6);
+    border: 1px solid rgba(0,255,255,0.03);
+    border-radius: 16px;
+    box-shadow: 0 0 20px rgba(0,255,255,0.25);
+    backdrop-filter: blur(10px);
+}
+.hud h2 {
+    font-size: 18px;
+    margin-bottom: 10px;
+    color: cyan;
+    letter-spacing: 2px;
+}
+.hud ul {
+    list-style: none;
+}
+.hud li {
+    margin: 8px 0;
+    font-size: 14px;
+}
+.hud span {
+    color: #00ffff;
+    font-weight: bold;
+}
+.ok {
+    color: #00ff88;
+}
+.game-title {
+    text-align: center;
+    margin-bottom: 12px;
+    font-size: 28px;
+    letter-spacing: 4px;
+    color: #dfffff;
+    text-shadow: 
+    0 0 6px rgba(0,255,255,0.8),
+     0 0 14px rgba(0,255,255,0.6),
+      0 0 28px rgba(0,255,255,0.4);
+    animation: glowPulse 3s ease-in-out infinite;
+    user-select: none;
+}
+@keyframes glowPulse {
+    0%,100% {
+        text-shadow:
+        0 0 6px rgba(0,255,255,0.6),
+     0 0 14px rgba(0,255,255,0.4),
+      0 0 28px rgba(0,255,255,0.2);
+    }
+    50% {
+        text-shadow: 
+        0 0 12px rgba(0,255,255,1),
+        0 0 28px rgba(0,255,255,0.8),
+        0 0 48px rgba(0,255,255,0.6);
+    }
+}
 .creepster-regular {
   font-family: "Creepster", system-ui;
   font-weight: 400;
   font-style: normal;
 }
-#canvas1{
-    border: 5px solid black;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    max-width: 100%;
-    max-height: 100%; 
-    font-family: "Creepster", cursive;
-}
+
 #player,#layer1,#layer2,#layer3,#layer4,#layer5,#enemy_fly,#enemy_plant,#enemy_spider_big , #fire ,#collisionAnimation, #lives{
     display: none;
 }
