--- a/style.css
+++ b/style.css
@@ -31,6 +31,46 @@ body {
     from {transform: translateY(0);}
     to {transform: translateY(40px);}
 }
+.music-btn{
+    position: absolute;
+    top: 25px;
+    left: 50%;
+    transform: translateX(-50%);
+
+    padding: 18px 50px;
+    font-size: 22px;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+
+    font-family: 'Creepster',cursive;
+    color: #00ffe7;
+
+    background: rgba(0,255,231,0.08);
+    border: 2px solid #00ffe7;
+    border-radius: 14px;
+    cursor:  pointer;
+    z-index: 100;
+
+    box-shadow: 
+        0 0 10px #00ffe7,
+        0 0 25px rgba(0, 255, 231, 0.5),
+        inset 0 0 15px rgba(0, 255, 231, 0.3);
+    transition: all 0.25s ease;
+    backdrop-filter: blur(6px);
+
+}
+.music-btn:hover {
+    background: rgba(0, 255, 231, 0.15);
+    box-shadow:  0 0 20px #00ffe7,
+        0 0 40px rgba(0, 255, 231, 0.8);
+    transform: translateX(-50%) scale(1.05);
+}
+.music-btn:active {
+    transform: translateX(-50%) scale(0.95);
+}
+.music-btn:focus {
+    outline: none;
+}
 .game-shell {
     display: flex;
     justify-content: center;
